# ee150

./: .gitignore
pset1/: SETUP.md  pyproject.toml  requirements.txt  results.json  tests.py  zip_assignment.py
pset1/dataset/: test.csv  train.csv
pset1/examples/: ex_2i_backprop.py  ex_3d_fashion_pytorch.ipynb
pset1/examples/figs/: ex_backprop_before
pset1/figs/: hand_backprop.drawio
pset1/grad/: __init__.py  autograd.py  nn.py
pset1/grad/tests/: test_2_prelim.py  test_2a.py  test_2b.py  test_2c.py  test_2d.py  test_2e.py  test_2f.py  test_2g.py  test_2h.py  test_2i.py  test_3a.py  test_3b.py  test_3c.py
pset1/latex/: format.tex  main.tex  preamble.tex
pset1/latex/problems/: problem-1.aux  problem-1.tex  problem-2.aux  problem-2.tex  problem-3.aux  problem-3.tex  problem-4.aux  problem-4.tex  problem-5.aux  problem-5.tex  problem-6.aux  problem-6.tex
pset2/: CBOW_marco_yang.ipynb  cbow.py  hello.py  log.txt  pset2.tex  pset2_old.tex  pyproject.toml
pset3/: .gitignore  SETUP.md  benchmark_conv2d.py  download_ntlk.py  pyproject.toml  requirements.txt  test_imdb.py  tests.py  train_imdb.py  train_mnist.py  visualize_filters.py  zip_assignment.py
pset3/latex/: format.tex  main.tex  preamble.tex
pset3/latex/problems/: problem-1.tex  problem-2.tex  problem-3.tex
pset3/psthree/: attention.py  cnn.py  conv.py  conv_old.py  data.py  lstm.py  rnn.py  train_test.py  transformer.py  utils.py
pset3/tests/: attention_tests.py  conv_tests.py
pset3/tests/test_data/: random_32x32.npz  random_attn.npz  random_large_w_everything.npz  random_mha.npz  random_w_padding.npz  random_w_stride.npz  simple.npz  simple_attn.npz  simple_mha.npz
