[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grad"
version = "0.1.0"
description = "EE 150 - Autograd"
authors = [{ name = "Armeet Singh Jatyani", email = "armeet@caltech.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "graphviz",
    "pytest",
    "pytest-json-report",
    "setuptools",
    "colorama",
    "matplotlib",
    "tqdm",
    "torch>=1.13.1",
    "ipykernel>=6.16.2",
    "gdown>=4.7.3",
    "pandas>=1.1.5",
    "pillow>=9.5.0",
    "torchvision>=0.14.1",
    "tabulate>=0.9.0",
]

[tool.setuptools.packages]
find = { include = ["grad"] }

# [tool.setuptools.package-data]
# # Include non-code data in the package, if needed
# grad = ["*.txt", "*.json"]

[tool.ruff]
line-length = 88
indent-width = 4
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
