[project]
name = "pset2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-core>=5.7.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
